# Haptic-EMT-Robot

./: .gitmodules  README.md
Bota Wrist Sensor/kortex-master/api_python/examples/600-admittance_control/: README.md  admittance_control.py  admittance_control_hg.py  admittance_control_surface.py  bota_serial_example.py
Bota Wrist Sensor/scripts/: bota_and_kinova_plotter.py  data_bota.npz  force_plotter.py
Controller/: AutomatedForceLaunch.sh  CMakeLists.txt  ForceLaunch.sh  ForceMomentLaunch.sh  HeartbeatMeasureLaunch.sh  JointTestLaunch.sh  KinovaLaunch.sh  RotationTestLaunch.sh  SimLaunch.sh  StiffnessSimLaunch.sh  TeleoperationLaunch.sh
Controller/project_starter/: CMakeLists.txt
Controller/project_starter/panda/: CMakeLists.txt  ForcePlotTest.py  GEN3_URDF_V12.urdf.bk  README.md  bota_driver copy.py.bk  bota_driver.py  calculateK_test.py  controller.cpp  controller3.cpp  controller_force_moment.cpp  controller_force_xyz.cpp  controller_force_z.cpp  controller_force_z_automated.cpp  controller_get_heartbeat.cpp  controller_joint_test.cpp  controller_joint_test_no_force_sensor.cpp  controller_prototype.cpp  controller_rotation_test.cpp  data_bota.npz  force_controller_xyz.cpp  force_controller_z.cpp  force_controller_z_automated.cpp  force_controller_z_automated_prototype.cpp  haply_driver.py  haply_driver_TEST.py  haply_driver_with_force_grid.py  haply_driver_with_force_no_scaling.py  panda.code-workspace  playbackController.cpp  playbackSimviz.cpp  redis_keys.h  simviz.cpp  simviz_measure_heartbeat.cpp  simviz_no_sensor.cpp  simviz_nonmoving_flat_plate.cpp  visualization.cpp  world2.urdf  world_nonmoving_flat_plate.urdf
Controller/project_starter/panda/Archived/: PlotAll_slow.py  bota_driver_backup.py  force_controller_z_automated_prototype.cpp  haply_driver_with_force_ARCHIVED.py
Controller/project_starter/panda/Python_Scripts/: HaplyPositionTest.py  OvershootPlot.py  PlotAll_prototype.py  bota_driver.py  calculateK_test_backup.py  haply_driver_with_force_grid.py  haply_driver_with_force_variable_scaling.py
Controller/project_starter/panda/Urdf_files/: GEN3_URDF_V12.urdf  GEN3_URDF_V12_gripper.urdf  world_nonmoving_flat_plate.urdf
Controller/urdf_models/panda/: GEN3_URDF_V12.urdf
Kinova/scripts/: CMakeLists.txt  RedisClient.cpp  RedisClient.h  redis_keys.h
Kinova/scripts/102-High_level_movement/: 01-record_tool_z_force.cpp  03-twist_command.cpp
Kinova/scripts/108-Gen3_torque_control/: 01-torque_control_cyclic.cpp
