# create an executable
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CS225A_BINARY_DIR})
ADD_EXECUTABLE (simviz_panda_gripper simviz.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (simviz_stiffness_map playbackSimviz.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (controller_stiffness_map playbackController.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (controller_panda_gripper controller.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (visualization visualization.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (force_controller_xyz_panda_gripper controller_force_xyz.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (controller_force_z controller_force_z.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (force_controller_z_automated controller_force_z_automated.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (controller_force_moment controller_force_moment.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (prototype_controller_panda_gripper controller_prototype.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (simviz_nonmoving_flatplate simviz_nonmoving_flat_plate.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (joint_test_controller controller_joint_test.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (rotation_test_controller controller_rotation_test.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (joint_test_controller_no_force_sensor controller_joint_test_no_force_sensor.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (simviz_no_sensor simviz_no_sensor.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (simviz_measure_heartbeat simviz_measure_heartbeat.cpp ${CS225A_COMMON_SOURCE})
ADD_EXECUTABLE (controller_get_heartbeat controller_get_heartbeat.cpp ${CS225A_COMMON_SOURCE})

# and link the library against the executable
TARGET_LINK_LIBRARIES (simviz_panda_gripper ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (controller_panda_gripper ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (visualization ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (force_controller_xyz_panda_gripper ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (controller_force_z ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (controller_force_moment ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (simviz_stiffness_map ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (controller_stiffness_map ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (prototype_controller_panda_gripper ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (simviz_nonmoving_flatplate ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (force_controller_z_automated ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (joint_test_controller ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (rotation_test_controller ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (joint_test_controller_no_force_sensor ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (simviz_no_sensor ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (simviz_measure_heartbeat ${CS225A_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (controller_get_heartbeat ${CS225A_COMMON_LIBRARIES})

# export resources such as model files.
# NOTE: this requires an install build
SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/world.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/GEN3_URDF_V12.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/GEN3_URDF_V12_no_sensor.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/plate.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Python_Scripts/PlotAll.py DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Python_Scripts/bota_driver.py DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/world2.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Python_Scripts/haply_driver_with_force_grid.py DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/world_nonmoving_flat_plate.urdf DESTINATION ${APP_RESOURCE_DIR})
FIle(COPY Urdf_files/world_empty.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Python_Scripts/haply_driver.py DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Python_Scripts/calculateK.py DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Python_Scripts/calculateK_test.py DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/world_no_sensor.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/GEN3_URDF_V12_gripper.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/GEN3_URDF_V12_stethoscope.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY Urdf_files/world_measure_heartbeat.urdf DESTINATION ${APP_RESOURCE_DIR})
